# maigret

./: .gitignore  Cargo.toml  LICENSE  README.md  data.json  generate_sites_md.py  go.mod  go.sum  maigrate.go  maigret.go
.github/workflows/: build.yml
chrome/: chrome.go  proxy.go
downloader/: instagram.go  mod.go
go/: README.md  go.sum  maigret.go
go/chrome/: chrome.go
src/: chrome.rs  cli.rs  core.rs  downloader.rs  logger.rs  main.rs  scraper.rs
