[package]
name = "maigret"
version = "2.0.0"
edition = "2021"
authors = ["Krisna Pranav <krisna.pranav@gmail.com>"]
description = "Professional OSINT username scanner across social networks"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "socks"] }

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Progress & UI
indicatif = "0.17"
console = "0.15"
colored = "2.1"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex
regex = "1.10"
fancy-regex = "0.13"

# Screenshot support
headless_chrome = { version = "1.0", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
chrono = "0.4"
fastrand = "2.0"

[features]
default = ["screenshots"]
screenshots = ["headless_chrome"]

[[bin]]
name = "maigret"
path = "src/main.rs"
